Adjust authorization methods
